add ignore log
