# docs/swagger.json
@@ -315,8 +315,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.SuccessResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
